<resources>
    <string name="app_name">reborn</string>
    <string name="HOME">HOME</string>
    <string name="COMMUNITY">COMMUNITY</string>
    <string name="MY_PAGE">MY PAGE</string>
    <string name="exercise_empty_list">현재 진행중인 운동이 없습니다.</string>
    <string name="exercise_add">맞춤운동을 추가해 보세요!</string>
    <string name="exercise_search">원하는 운동, 관심질병을 검색해보세요.</string>
    <string name="exercise_custom_add">맞춤 운동 추가하기</string>
    <string name="exercise_today_best">오늘의 베스트 운동</string>
    <string name="feed_today_best">오늘의 베스트 피드</string>
    <string name="exercise_move">운동 보러가기></string>
    <string name="nickname_main">%s님 환영합니다.</string>

    <string name="native_app_key">b5cce02d691dc3b8070098c2dbece43e</string>

    <string name="search_result">검색결과</string>


    <string name="exercise_name">운동명칭</string>
    <string name="exercise_explanation">운동 설명</string>
    <string name="video">동영상</string>
    <string name="video_copy">시범영상 따라하기</string>
    <string name="related_exercise">관련 운동</string>
    <string name="related_disease">관련질병</string>
    <string name="disease_explanation">질병 설명</string>
    <string name="disease">질병명칭(질병코드)</string>
    <string name="today_exercise_complete">오늘의 운동 완료</string>
    <string name="routine_name">루틴명</string>
    <string name="routine_time">전체 진행 시간 : %s분%s초</string>
    <string name="average_accuracy">평균 진행도 : %d</string>
    <string name="exercise_time">%s : %s초 %s세트</string>
    <string name="exercise_start">운동 시작하기</string>
    <string name="exercise_next">다음</string>
    <string name="write_next">다음에 작성하기</string>
    <string name="routine_feedback">프로그램 최적화 피드백</string>
    <string name="exercise_difficulty">동작하기 어려웠나요?</string>
    <string name="exercise_repeat">반복 횟수가 많지는 않으셨나요?</string>
    <string name="exercise_rest">휴식시간이 부족하지는 않으셨나요?</string>
    <string name="exercise_rating">운동이 마음에 드시나요?</string>
    <string name="exercise_easy">쉬움</string>
    <string name="exercise_nomal">괜찮음</string>
    <string name="exercise_hard">어려움</string>
    <string name="repeat_few">적음</string>
    <string name="repeat_many">많음</string>

    <string name="dialog_text">운동 루틴 최적화가\n이루어지지 않았습니다.\n계속하시겠습니까?</string>
    <string name="dialog_ready">준비 중 입니다.</string>
    <string name="dialog_close">닫기</string>

    <string name="exercise_complete">운동 프로그램을 완료 했어요!\n운동 효과를 확인해 볼까요?</string>
    <string name="rating_start">평가 시작하기</string>
    <string name="home_move">홈으로</string>
    <string name="continues">이어하기</string>

    <string name="return_list">리스트로 돌아가기</string>

    <string name="routine_list">%s님의 운동 루틴 목록</string>
    <string name="routine_playtime">소요시간 : %s</string>
    <string name="routine_date">기간 : %s ~ %s</string>

    <string name="mypage_profile">프로필</string>
    <string name="mypage_information">개인 정보 수정</string>
    <string name="mypage_bookmark">즐겨찾기</string>
    <string name="mypage_history">운동 기록</string>
    <string name="mypage_terms">이용 약관 및 개인정보처리 방침</string>
    <string name="mypage_logout">로그아웃</string>

    <string name="profile_change">프로필 수정</string>
    <string name="profile_Scope_of_disclosure">공개범위</string>
    <string name="profile_etc">기타</string>

    <string name="information">개인 정보</string>
    <string name="information_name">이름</string>
    <string name="information_gender">성별</string>
    <string name="information_age">나이</string>
    <string name="information_weight">체중</string>
    <string name="information_height">키</string>
    <string name="information_disease">기저질환</string>
    <string name="information_past_disease">과거력</string>

    <string name="bookmark_routine">즐겨찾는 루틴</string>
    <string name="bookmark_exercise">즐겨찾는 운동</string>

    <string name="login">로그인</string>
    <string name="reborn">RE:BORN Fit</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="none">없음</string>
    <string name="account_height">키를 알려주세요</string>
    <string name="account_weight">체중을 알려주세요</string>
    <string name="account_terms">이용약관</string>
    <string name="terms_agree">동의하고 계속하기</string>
    <string name="account_experience">운동경험이 있나요?</string>
    <string name="beginner">초급자</string>
    <string name="intermediate">중급자</string>
    <string name="advanced">고급자</string>
    <string name="beginner_description">운동경력 1년 미만\n또는\n스쿼트 중량 ≤ 본인 체중 X 1.5</string>
    <string name="intermediate_description">운동경력 1년 이상 3년 미만\n또는\n본인 체중 X 1.5 ＜ 스쿼트 중량 ≤ 본인 체중 X 2.5</string>
    <string name="advanced_description">운동경력 1년 미만\n또는\n스쿼트 중량 ≤ 본인 체중 X 1.5</string>

    <string name="program_stop">프로그램 제작 중단하기</string>
    <string name="routine_stop">루틴 제작 중단하기</string>
    <string name="select_program_add">선택한 운동 프로그램 추가하기</string>

    <string name="assessment_purpose">평가를 시작하겠습니다.</string>
    <string name="assessment_purpose_title">어떤 운동이 필요하세요?</string>
    <string name="assessment_purpose_btn_1">재활 운동</string>
    <string name="assessment_purpose_btn_2">근력 운동</string>
    <string name="assessment_purpose_btn_3">교정 운동</string>

    <string name="assessment_purpose_rehab">통증조절 운동</string>
    <string name="rehab_page_1">(1/5)</string>
    <string name="rehab_page_2">(2/5)</string>
    <string name="rehab_page_3">(3/5)</string>
    <string name="rehab_page_4">(4/5)</string>
    <string name="assessment_purpose_rehab_title">진단받은 질병명(코드)가 있나요?</string>
    <string name="assessment_purpose_rehab_hint_1">여기에 입력해 주세요</string>

    <string name="assessment_spot1_title">통증 부위를 선택해주세요</string>
    <string name="assessment_spot1">목</string>
    <string name="assessment_spot2">어깨</string>
    <string name="assessment_spot3">가슴</string>
    <string name="assessment_spot4">복부</string>
    <string name="assessment_spot5">위팔</string>
    <string name="assessment_spot6">팔꿈치</string>
    <string name="assessment_spot7">아래팔</string>
    <string name="assessment_spot8">손목</string>
    <string name="assessment_spot9">등</string>
    <string name="assessment_spot10">허리</string>
    <string name="assessment_spot11">엉덩이</string>
    <string name="assessment_spot12">윗다리</string>
    <string name="assessment_spot13">무릎</string>
    <string name="assessment_spot14">아랫\n다리</string>
    <string name="assessment_spot15">발목</string>

    <string name="assessment_spot_location_title">통증 위치를 알려주세요</string>


    <string name="static_title">가만히 있을 때</string>
    <string name="static_vas_title">통증 정도를 선택해주세요.</string>

    <string name="dynamic_title">움직일 때</string>
    <string name="dynamic_vas_title">통증 정도를 알려주세요.</string>

    <string name="recommend_routine_list">추천 운동 루틴 목록</string>
    <string name="recommend_routine_list_title">원하는 운동 루틴을 골라보세요!</string>

    <string name="recommend_routine_preview">번 운동 루틴 미리보기</string>
    <string name="recommend_routine_preview_title">진행될 운동들을 확인하세요!</string>

    <string name="name_empty"></string>

    <string name="result_search">%s(%s)</string>





</resources>