<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.reborn.reborn.ui.view.assessment.vas.DynamicViewModel" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/primary"
            android:elevation="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assessment_purpose_rehab"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rehab_page_4"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:textSize="22dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/primary"
            android:text="@string/static_title"
            android:textSize="22dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:text="@string/dynamic_vas_title"
            android:textSize="22dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:elevation="4dp"
                android:text="@string/prev"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:gravity="center"
                android:background="@drawable/btn_previous_primary"/>


            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:elevation="4dp"
                android:text="@string/next"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:gravity="center"
                android:background="@drawable/btn_next_primary"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/primary"
            android:gravity="center"
            android:elevation="4dp"
            android:text="@string/routine_stop"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="22dp"
            android:onClick="@{() -> vm.stop()}"/>

    </LinearLayout>

</layout>