<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.reborn.reborn.ui.view.assessment.rehab.CodeViewModel" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/primary"
            android:elevation="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assessment_purpose_rehab"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rehab_page_1"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:textSize="22dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:text="@string/assessment_purpose_rehab_title"
            android:textSize="22dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">


            <EditText
                android:id="@+id/etCode"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/back_stroke_radius_5dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:elevation="4dp"
                android:hint="@string/assessment_purpose_rehab_hint_1"
                android:textColorHint="@color/second_primary"
                android:fontFamily="@font/inter_bold"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:paddingLeft="30dp"
                android:layout_marginTop="40dp"
                android:text="@={vm.codeText}"
                android:onClick="@{() -> vm.btnCodeInput()}"/>

            <TextView
                android:id="@+id/btnNone"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/back_stroke_radius_5dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:elevation="4dp"
                android:text="@string/none"
                android:fontFamily="@font/inter_bold"
                android:textSize="16dp"
                android:paddingLeft="30dp"
                android:gravity="center_vertical"
                android:textColor="@color/second_primary"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> vm.btnNone()}"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:elevation="4dp"
                android:text="@string/prev"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:gravity="center"
                android:onClick="@{() -> vm.prev()}"
                android:background="@drawable/btn_previous_primary"/>


            <TextView
                android:id="@+id/btn_next"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:elevation="4dp"
                android:text="@string/next"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:gravity="center"
                android:onClick="@{() -> vm.next()}"
                android:background="@{vm.btnState == true ? @drawable/btn_next_primary : @drawable/btn_next_gray}"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/primary"
            android:gravity="center"
            android:elevation="4dp"
            android:text="@string/program_stop"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textSize="22dp"
            android:onClick="@{() -> vm.stop()}"/>


    </LinearLayout>


</layout>