<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.reborn.reborn.ui.view.main.myPage.MyPageNavViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:text="@string/mypage_profile"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:onClick="@{() -> vm.moveProfile()}"
                    android:background="@drawable/bg_rounded_10dp_stroke_gray_bbb"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:text="@string/mypage_information"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:onClick="@{() -> vm.moveInformation()}"
                    android:background="@drawable/bg_rounded_10dp_stroke_gray_bbb"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:text="@string/mypage_bookmark"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:onClick="@{() -> vm.moveBookmark()}"
                    android:background="@drawable/bg_rounded_10dp_stroke_gray_bbb"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:text="@string/mypage_history"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:onClick="@{() -> vm.moveHistory()}"
                    android:background="@drawable/bg_rounded_10dp_stroke_gray_bbb"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:text="@string/mypage_terms"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@drawable/bg_rounded_10dp_stroke_gray_bbb"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>